Nicebank. With MySQL. Transaction cleanup strategy fails with multiple database connections.